[gd_scene load_steps=15 format=3]

[ext_resource type="Script" path="res://scripts/quit.gd" id="1_c86qh"]
[ext_resource type="Theme" uid="uid://ouvvf4pnqpm2" path="res://basthem.tres" id="2_e2al3"]
[ext_resource type="Texture2D" uid="uid://cqpxhcpn6o027" path="res://black.jpeg" id="3_j1u0c"]
[ext_resource type="Script" path="res://scripts/Black2.gd" id="4_2dx0q"]
[ext_resource type="Shader" path="res://dis.gdshader" id="5_1yxbm"]
[ext_resource type="Texture2D" uid="uid://bsq1ilyxgqdtk" path="res://Untitled(2).jpg" id="6_rf77j"]
[ext_resource type="Script" path="res://scripts/Black3.gd" id="6_v5n63"]
[ext_resource type="Texture2D" uid="uid://co1yiga5hu71c" path="res://Untitled(1).jpg" id="6_v7e15"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_q1f6y"]
noise_type = 2
seed = 5

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_wmsnh"]
seamless = true
seamless_blend_skirt = 0.063
noise = SubResource("FastNoiseLite_q1f6y")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_68i6s"]
noise_type = 2
seed = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_8xaii"]
seamless = true
noise = SubResource("FastNoiseLite_68i6s")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jsnj0"]
shader = ExtResource("5_1yxbm")
shader_parameter/scroll1 = Vector2(0.05, 0.05)
shader_parameter/scroll2 = Vector2(0.05, 0.05)
shader_parameter/distortion_strength = 0.2
shader_parameter/tone_color = Color(0.0980392, 0.0980392, 0.0980392, 0.592157)
shader_parameter/top_color = Color(0.0352941, 0.0352941, 0.0352941, 1)
shader_parameter/light_start = 0.4
shader_parameter/light_end = 0.4
shader_parameter/noise1 = SubResource("NoiseTexture2D_wmsnh")
shader_parameter/noise2 = SubResource("NoiseTexture2D_8xaii")

[sub_resource type="PlaneMesh" id="PlaneMesh_6mck8"]
size = Vector2(2000, 1200)
orientation = 2

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c86qh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 237.0
offset_bottom = 100.0
theme = ExtResource("2_e2al3")

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Are you sure you want to 
exit the game I worked so
hard to make spending hours
of my time"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_e2al3")
theme_override_constants/separation = 50
alignment = 1

[node name="No" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_e2al3")
text = "No Go Back"

[node name="yes" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_e2al3")
text = "Yes Exit Game"

[node name="Untitled(1)" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(581.889, 326.5)
scale = Vector2(0.612037, 0.612037)
texture = ExtResource("6_v7e15")

[node name="Black" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.741176)
z_index = -1
position = Vector2(562.679, 227.046)
scale = Vector2(6.57014, 6.82733)
texture = ExtResource("3_j1u0c")

[node name="Black2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.952941)
z_index = -1
position = Vector2(562.679, 227.046)
scale = Vector2(6.57014, 6.82733)
texture = ExtResource("3_j1u0c")
script = ExtResource("4_2dx0q")

[node name="Timer" type="Timer" parent="Black2"]

[node name="Timer2" type="Timer" parent="Black2"]

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
z_index = 3
material = SubResource("ShaderMaterial_jsnj0")
position = Vector2(600.52, 248.434)
mesh = SubResource("PlaneMesh_6mck8")
texture = ExtResource("6_v7e15")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 5

[node name="Black3" type="Sprite2D" parent="CanvasLayer"]
visible = false
z_index = 6
position = Vector2(707.5, 452)
scale = Vector2(0.979688, 1.31296)
texture = ExtResource("6_rf77j")
script = ExtResource("6_v5n63")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/No" to="CanvasLayer/Black3" method="_on_no_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="timeout" from="Black2/Timer" to="Black2" method="_on_timer_timeout"]
[connection signal="timeout" from="Black2/Timer2" to="Black2" method="_on_timer_2_timeout"]
